--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,28 +27,28 @@
             android:theme="@style/AppTheme"
             android:windowSoftInputMode="adjustResize">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
 
-                <category android:name="android.intent.category.DEFAULT" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+                <!--<category android:name="android.intent.category.LAUNCHER" />-->
+            <!--</intent-filter>-->
 
-            <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.VIEW" />-->
 
-                <category android:name="android.intent.category.BROWSABLE" />
-                <category android:name="android.intent.category.DEFAULT" />
+                <!--<category android:name="android.intent.category.BROWSABLE" />-->
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
 
-                <data
-                    android:host="auth"
-                    android:scheme="rocketchat" />
+                <!--<data-->
+                    <!--android:host="auth"-->
+                    <!--android:scheme="rocketchat" />-->
 
-                <data
-                    android:host="go.rocket.chat"
-                    android:path="/auth"
-                    android:scheme="https" />
-            </intent-filter>
+                <!--<data-->
+                    <!--android:host="go.rocket.chat"-->
+                    <!--android:path="/auth"-->
+                    <!--android:scheme="https" />-->
+            <!--</intent-filter>-->
         </activity>
 
         <activity
