--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
-buildscript { 
+buildscript {
     ext.kotlin_version = '1.3.31'
 
     apply from: rootProject.file('dependencies.gradle')
@@ -18,7 +18,12 @@ buildscript {
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'io.fabric.tools:gradle:1.26.1'
         classpath "com.github.ben-manes:gradle-versions-plugin:0.20.0"
-    classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version" }
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+    }
+
+    
+
+
 }
 
 allprojects {
