removed product flavors and uploaded to bintray

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,7 @@ allprojects {
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
         maven { url "https://jitpack.io" }
         maven { url "https://github.com/jitsi/jitsi-maven-repository/raw/master/releases" }
+        maven { url "https://abc924.bintray.com/maven" }
     }
 
     apply from: rootProject.file('dependencies.gradle')
