--- a/mifos-rocketchat/src/main/AndroidManifest.xml
+++ b/mifos-rocketchat/src/main/AndroidManifest.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     package="chat.rocket.android">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -12,15 +11,13 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
-        android:name=".app.RocketChatApplication"
         android:allowBackup="true"
         android:fullBackupContent="@xml/backup_config"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        tools:replace="android:name">
+        android:supportsRtl="true">
 
         <activity
             android:name=".authentication.ui.AuthenticationActivity"
