--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -48,7 +48,6 @@ androidExtensions {
     experimental = true
 }
 
-
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
@@ -62,9 +61,12 @@ dependencies {
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
-//    implementation 'chat.rocket.android:mifos-rocketchat:1.0.2'
+//    implementation 'chat.rocket.android:mifos-rocketchat:1.0.4'
 
     implementation (project(path: ':mifos-rocketchat'))
+    annotationProcessor "com.google.dagger:dagger-compiler:2.16"
+    implementation "com.google.dagger:dagger:2.16"
+    compileOnly 'javax.annotation:jsr250-api:1.0'
 }
-
 //apply plugin: 'com.google.gms.google-services'
+
