--- a/mifos-rocketchat/src/main/AndroidManifest.xml
+++ b/mifos-rocketchat/src/main/AndroidManifest.xml
@@ -19,12 +19,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
 
-        <activity
-            android:name=".authentication.ui.AuthenticationActivity"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
-            android:theme="@style/AppTheme"
-            android:windowSoftInputMode="adjustResize">
+        <!--<activity-->
+        <!--android:name=".authentication.ui.AuthenticationActivity"-->
+        <!--android:configChanges="orientation"-->
+        <!--android:screenOrientation="portrait"-->
+        <!--android:theme="@style/AppTheme"-->
+        <!--android:windowSoftInputMode="adjustResize">-->
 
             <!--<intent-filter>-->
             <!--<action android:name="android.intent.action.MAIN" />-->
@@ -48,7 +48,7 @@
             <!--android:path="/auth"-->
             <!--android:scheme="https" />-->
             <!--</intent-filter>-->
-        </activity>
+        <!--</activity>-->
 
         <activity
             android:name=".server.ui.ChangeServerActivity"
